# eng-mcp-suite

./: .gitignore  AUDIT.md  CHANGELOG.md  LICENSE_SUMMARY.md  README.md  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: PRIVATE_BOLT_ON.md  private.yaml.example
docs/brand/: README-template.md  brand-guide.md
docs/brand/docs-template/: mkdocs.yml
docs/brand/docs-template/docs/: architecture.md  index.md  tools.md  usage.md
docs/playbook/: README.md  blog.md  cheat-sheet.md  playbook.md  slides.md  workshop.md
scripts/: audit_repos.py
src/eng_mcp_suite/: __init__.py  cli.py  installer.py  manifest.py  private_manifest.py
src/eng_mcp_suite/data/: manifest.yaml
tests/: test_audit.py  test_manifest.py  test_private_manifest.py
