[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eng-mcp-suite"
version = "1.2.0"
description = "All-inclusive engineering MCP catalog and installer for RF, EMC, PCB, SI, and lab-test workflows"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "RFingAdam" },
]
keywords = ["mcp", "engineering", "rf", "emc", "pcb", "lab-automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
eng-mcp-suite = "eng_mcp_suite.cli:app"

[project.urls]
Homepage = "https://github.com/RFingAdam/eng-mcp-suite"
Issues = "https://github.com/RFingAdam/eng-mcp-suite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"eng_mcp_suite" = ["data/*.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
